--- a/commands/arcCAM.htm
+++ b/commands/arcCAM.htm
@@ -58,6 +58,7 @@ th, td {
 				<select id="ToolPathType" onchange="" style="widthxxx:100%" >
 					<option value="Profile">Profile</option>
 					<option value="Offset Profile">Offset Profile</option>
+					<option value="Haas Pocket">Haas Pocket</option>
 					<option value="Pocket">Pocket</option>
 					<option value="Center Drill">Center Drill</option>
 					<option value="Drill">Drill</option>
