--- a/commands/arcCAM.htm
+++ b/commands/arcCAM.htm
@@ -120,8 +120,17 @@ th, td {
 				</table>
 				<moi:SmallBr /><moi:CommandDoneCancel />
 			</div>
+			
+			
+			
 			<div id="CurveSelectPrompt" class="hiddencommandprompt"><strong>Select Curve To Export<br>As G-code</strong><moi:SmallBr /><moi:CommandDoneCancel /></div>
+			
+			
+			
 			<div id="OriginSelectPrompt" class="hiddencommandprompt"><strong>Select Origin Point</strong><moi:SmallBr /><moi:CommandDoneCancel /></div>
+			
+			
+			
 			<div id="DrillSelectPrompt" class="hiddencommandprompt"><strong>Drill Options</strong>
 				<table style="cellpadding: 15px">
 						<tr>
@@ -179,7 +188,10 @@ th, td {
 		
 		
 		
-		<div id="ToolOffsetStartSelectPrompt" class="hiddencommandprompt"><strong>Select Tool Offset<br>Starting Point</strong><moi:SmallBr /><moi:CommandDoneCancel /></div>
+		<div id="ToolOffsetStartSelectPrompt" class="hiddencommandprompt"><center><strong>Select Tool Offset<br>Starting Point</strong><moi:SmallBr />
+		<moi:CheckButton id="g92_offset">Use G92 Offset</moi:CheckButton>
+		<moi:CommandDoneCancel /></center>
+		</div>
 		
 		
 		
